correctly align comments

--- a/content/styles/default.scss
+++ b/content/styles/default.scss
@@ -75,7 +75,6 @@ div#mindkiller {
 
 div#disqus {
   border-top: 10px solid $h1;
-  text-align: center;
 }
 
 div#nav {
